--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const myParam = urlParams.get('uri');
-    window.location.href = myParams;
+    window.location.assign(myParam);
 </script>
